--- a/language/i18n_ar.json
+++ b/language/i18n_ar.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "احسب استهلاك المنزل بالكامل من الكهرباء والمياه على أساس يومي وشهري وسنوي، كما يمكنك الاطلاع على إحصائيات استهلاك الأجهزة الفردية، ونسبة استهلاك الطاقة لكل جهاز خلال الفترة المحددة، والاستهلاك الكلي والفردي للطاقة.",
     "smart_support_helps_3": "3.استكشاف الأخطاء وإصلاحها",
     "CL_SL_CM_about_usage_month_desc": "البيانات المعروضة هي تقديرات، وليست قياسات دقيقة.\n تعتمد تقديراتنا على اختبارات خاضعة للرقابة، لذا قد تختلف نتائجك الفعلية.\n يعتمد استخدام الطاقة في العالم الحقيقي على بيئتك وعاداتك المحددة.",
-    "CL_CF_HP_no_card_key": "لا يوجد بطاقة"
+    "CL_CF_HP_no_card_key": "لا يوجد بطاقة",
+    "CL_CF_TV_new_to_connectlife": "جديد في Connectlife",
+    "CL_CF_TV_scan_with_cl": "المسح الضوئي باستخدام تطبيق ConnectLife للجوال",
+    "CL_CF_AS_or": "أو",
+    "CL_CF_AS_report_an_issue": "الإبلاغ عن مشكلة."
 }
