--- a/language/i18n_fa.json
+++ b/language/i18n_fa.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "کل برق و آب مصرفی خانه را به صورت روزانه، ماهانه و سالانه محاسبه کنید. همچنین می توانید آمار مصرف تک تک دستگاه ها، نسبت مصرف انرژی هر دستگاه در بازه زمانی انتخاب شده، مصرف انرژی کلی و فردی را مشاهده کنید.",
     "smart_support_helps_3": "3. عیب یابی",
     "CL_SL_CM_about_usage_month_desc": "داده های نشان داده شده تخمین هستند، نه اندازه گیری دقیق.\n تخمین های ما بر اساس آزمایش های کنترل شده است، بنابراین نتایج واقعی شما ممکن است متفاوت باشد.\n مصرف انرژی در دنیای واقعی به محیط و عادات خاص شما بستگی دارد.",
-    "CL_CF_HP_no_card_key": "بدون کارت"
+    "CL_CF_HP_no_card_key": "بدون کارت",
+    "CL_CF_TV_new_to_connectlife": "جدید برای CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "با برنامه موبایل ConnectLife اسکن کنید",
+    "CL_CF_AS_or": "یا",
+    "CL_CF_AS_report_an_issue": "گزارش یک مشکل"
 }
