--- a/language/i18n_kk.json
+++ b/language/i18n_kk.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Күнделікті, айлық және жылдық негізде бүкіл үй қуаты мен суды тұтынуды есептеңіз. Сондай-ақ жеке құрылғылардың тұтыну статистикасын, таңдалған кезеңдегі әрбір құрылғының қуат тұтыну үлесін, жалпы және жеке қуат тұтынуын көруге болады.",
     "smart_support_helps_3": "3. Ақаулық себебін іздеу және түзету",
     "CL_SL_CM_about_usage_month_desc": "Көрсетілген деректер нақты өлшемдер емес, бағалаулар болып табылады.\n Біздің бағалауларымыз бақыланатын сынақтарға негізделген, сондықтан сіздің нақты нәтижелеріңіз әртүрлі болуы мүмкін.\n Нақты әлемдегі энергияны пайдалану сіздің нақты ортаңызға және әдеттеріңізге байланысты.",
-    "CL_CF_HP_no_card_key": "Карта жоқ"
+    "CL_CF_HP_no_card_key": "Карта жоқ",
+    "CL_CF_TV_new_to_connectlife": "CONNECTLIFE ҮШІН ЖАҢА",
+    "CL_CF_TV_scan_with_cl": "ConnectLife мобильді қолданбасымен сканерлеңіз",
+    "CL_CF_AS_or": "немесе",
+    "CL_CF_AS_report_an_issue": "мәселені хабарлау."
 }
