--- a/language/i18n_ru.json
+++ b/language/i18n_ru.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Рассчитать потребление электроэнергии и воды по всему дому на ежедневной, ежемесячной и ежегодной основе. Вы также можете просмотреть статистику потребления отдельных устройств, долю потребления энергии каждым устройством в течение выбранного периода, общее и индивидуальное потребление энергии.",
     "smart_support_helps_3": "3. Поиск неисправностей",
     "CL_SL_CM_about_usage_month_desc": "Приведенные данные являются оценочными, а не точными измерениями.\n Наши оценки основаны на контролируемых испытаниях, поэтому ваши фактические результаты могут отличаться.\n Реальное потребление энергии зависит от ваших конкретных условий и привычек.",
-    "CL_CF_HP_no_card_key": "Нет карты"
+    "CL_CF_HP_no_card_key": "Нет карты",
+    "CL_CF_TV_new_to_connectlife": "НОВОЕ В CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Сканируйте с помощью мобильного приложения ConnectLife",
+    "CL_CF_AS_or": "или",
+    "CL_CF_AS_report_an_issue": "сообщить о проблеме."
 }
