--- a/language/i18n_sr-BA.json
+++ b/language/i18n_sr-BA.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Израчунајте потрошњу струје и воде у целој кући на дневној, месечној и годишњој бази. Такође можете погледати статистику потрошње појединих уређаја, пропорцију потрошње енергије сваког уређаја у одабраном периоду, укупну и појединачну потрошњу енергије.",
     "smart_support_helps_3": "3. Отклањање проблема",
     "CL_SL_CM_about_usage_month_desc": "Приказани подаци су процене, а не тачна мерења.\n Наше процене су засноване на контролисаним тестовима, тако да ваши стварни резултати могу да варирају.\n Коришћење енергије у стварном свету зависи од вашег специфичног окружења и навика.",
-    "CL_CF_HP_no_card_key": "Но Цард"
+    "CL_CF_HP_no_card_key": "Но Цард",
+    "CL_CF_TV_new_to_connectlife": "НОВО ЗА ЦОННЕЦТЛИФЕ",
+    "CL_CF_TV_scan_with_cl": "Скенирајте помоћу мобилне апликације ЦоннецтЛифе",
+    "CL_CF_AS_or": "или",
+    "CL_CF_AS_report_an_issue": "пријави проблем."
 }
