--- a/language/i18n_th.json
+++ b/language/i18n_th.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "คำนวณการใช้พลังงานและน้ำของทั้งบ้านในแต่ละวัน รายเดือน และรายปี นอกจากนี้คุณยังสามารถดูสถิติการใช้พลังงานของแต่ละอุปกรณ์ สัดส่วนการใช้พลังงานของแต่ละอุปกรณ์ภายในช่วงเวลาที่เลือก การใช้พลังงานโดยรวมและแต่ละอุปกรณ์",
     "smart_support_helps_3": "3. การแก้ไขปัญหา",
     "CL_SL_CM_about_usage_month_desc": "ข้อมูลที่แสดงนั้นเป็นค่าประมาณ ไม่ใช่การวัดที่แน่นอน\n การประมาณการของเราขึ้นอยู่กับการทดสอบที่มีการควบคุม ดังนั้นผลลัพธ์จริงของคุณอาจแตกต่างกันไป\n การใช้พลังงานในโลกแห่งความเป็นจริงขึ้นอยู่กับสภาพแวดล้อมและนิสัยเฉพาะของคุณ",
-    "CL_CF_HP_no_card_key": "ไม่มีบัตร"
+    "CL_CF_HP_no_card_key": "ไม่มีบัตร",
+    "CL_CF_TV_new_to_connectlife": "ใหม่ใน CONNECTLife",
+    "CL_CF_TV_scan_with_cl": "สแกนด้วยแอปมือถือ ConnectLife",
+    "CL_CF_AS_or": "หรือ",
+    "CL_CF_AS_report_an_issue": "รายงานปัญหา."
 }
