--- a/language/i18n_bg.json
+++ b/language/i18n_bg.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Изчислете потреблението на енергия и вода за цялата къща на дневна, месечна и годишна база. Можете също така да видите статистиката за потреблението на отделните устройства, съотношението на потреблението на енергия на всяко устройство в рамките на избрания период, общото и индивидуалното потребление на енергия.",
     "smart_support_helps_3": "3. Отстраняване на неизправности",
     "CL_SL_CM_about_usage_month_desc": "Показаните данни са приблизителни, а не точни измервания.\n Нашите оценки се основават на контролирани тестове, така че действителните ви резултати може да варират.\n Използването на енергия в реалния свят зависи от вашата специфична среда и навици.",
-    "CL_CF_HP_no_card_key": "Без карта"
+    "CL_CF_HP_no_card_key": "Без карта",
+    "CL_CF_TV_new_to_connectlife": "НОВО В CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Сканирайте с мобилното приложение ConnectLife",
+    "CL_CF_AS_or": "или",
+    "CL_CF_AS_report_an_issue": "докладвайте за проблем."
 }
