--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Calculate the whole house power and water consumption on a daily, monthly, and yearly basis. You can also view the consumption statistics of individual devices, the proportion of energy consumption of each device within the selected period, the overall and individual energy consumption.",
     "smart_support_helps_3": "3. Troubleshooting",
     "CL_SL_CM_about_usage_month_desc": "The data shown are estimates, not exact measurements.\nOur estimates are based on controlled tests, so your actual results may vary.\nReal-world energy use depends on your specific environment and habits.",
-    "CL_CF_HP_no_card_key": "No Card"
+    "CL_CF_HP_no_card_key": "No Card",
+    "CL_CF_TV_new_to_connectlife": "NEW TO CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Scan with the ConnectLife mobile app",
+    "CL_CF_AS_or": "or",
+    "CL_CF_AS_report_an_issue": "report an issue."
 }
