--- a/language/i18n_es.json
+++ b/language/i18n_es.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Calcula el consumo de energía y agua de toda la casa de forma diaria, mensual y anual. También puedes ver las estadísticas de consumo de dispositivos individuales, la proporción de consumo de energía de cada dispositivo dentro del período seleccionado, el consumo de energía total e individual.",
     "smart_support_helps_3": "3. Solución de problemas",
     "CL_SL_CM_about_usage_month_desc": "Los datos mostrados son estimaciones, no medidas exactas.\n Nuestras estimaciones se basan en pruebas controladas, por lo que los resultados reales pueden variar.\n El uso de energía en el mundo real depende de su entorno y sus hábitos específicos.",
-    "CL_CF_HP_no_card_key": "Sin tarjeta"
+    "CL_CF_HP_no_card_key": "Sin tarjeta",
+    "CL_CF_TV_new_to_connectlife": "NUEVO EN CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Escanee con la aplicación móvil ConnectLife",
+    "CL_CF_AS_or": "o",
+    "CL_CF_AS_report_an_issue": "reportar un problema"
 }
