--- a/language/i18n_ko.json
+++ b/language/i18n_ko.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "매일, 매월, 매년 전체 집의 전력 및 물 소비량을 계산합니다. 또한 개별 기기의 소비 통계, 선택한 기간 내 각 기기의 에너지 소비 비율, 전체 및 개별 에너지 소비량을 볼 수 있습니다.",
     "smart_support_helps_3": "3. 문제 해결",
     "CL_SL_CM_about_usage_month_desc": "표시된 데이터는 추정치일 뿐 정확한 측정치가 아닙니다.\n 당사의 추정치는 통제된 실험을 기반으로 하므로 실제 결과는 다를 수 있습니다.\n 실제 에너지 사용량은 개인의 환경과 습관에 따라 달라집니다.",
-    "CL_CF_HP_no_card_key": "카드 없음"
+    "CL_CF_HP_no_card_key": "카드 없음",
+    "CL_CF_TV_new_to_connectlife": "CONNECTLIFE에 새로 가입했습니다",
+    "CL_CF_TV_scan_with_cl": "ConnectLife 모바일 앱으로 스캔하세요",
+    "CL_CF_AS_or": "또는",
+    "CL_CF_AS_report_an_issue": "문제를 보고하세요."
 }
