--- a/language/i18n_nb.json
+++ b/language/i18n_nb.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Beregn hele husets strøm- og vannforbruk på daglig, månedlig og årlig basis. Du kan også se forbruksstatistikken til individuelle enheter, andelen av energiforbruket til hver enhet innenfor den valgte perioden, det totale og individuelle energiforbruket.",
     "smart_support_helps_3": "3. Feilsøking",
     "CL_SL_CM_about_usage_month_desc": "Dataene som vises er estimater, ikke eksakte målinger.\n Våre estimater er basert på kontrollerte tester, så de faktiske resultatene dine kan variere.\n Den virkelige energibruken avhenger av ditt spesifikke miljø og dine vaner.",
-    "CL_CF_HP_no_card_key": "Ingen kort"
+    "CL_CF_HP_no_card_key": "Ingen kort",
+    "CL_CF_TV_new_to_connectlife": "NYHET I CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Skann med ConnectLife-mobilappen",
+    "CL_CF_AS_or": "eller",
+    "CL_CF_AS_report_an_issue": "rapportere et problem."
 }
