--- a/language/i18n_uk.json
+++ b/language/i18n_uk.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "Розрахуйте загальне споживання електроенергії та води в будинку на щоденній, місячній та річній основі. Ви також можете переглянути статистику споживання окремих пристроїв, частку споживання енергії кожним пристроєм за вибраний період, загальне та індивідуальне споживання енергії.",
     "smart_support_helps_3": "3. Вирішення проблем",
     "CL_SL_CM_about_usage_month_desc": "Наведені дані є приблизними, а не точними вимірюваннями.\n Наші оцінки базуються на контрольованих тестах, тому ваші фактичні результати можуть відрізнятися.\n Реальне використання енергії залежить від вашого середовища та звичок.",
-    "CL_CF_HP_no_card_key": "Без картки"
+    "CL_CF_HP_no_card_key": "Без картки",
+    "CL_CF_TV_new_to_connectlife": "НОВИНКА В CONNECTLIFE",
+    "CL_CF_TV_scan_with_cl": "Скануйте за допомогою мобільного додатку ConnectLife",
+    "CL_CF_AS_or": "або",
+    "CL_CF_AS_report_an_issue": "повідомити про проблему."
 }
