--- a/language/i18n_zh-TW.json
+++ b/language/i18n_zh-TW.json
@@ -4620,5 +4620,9 @@
     "smart_energy_helps_2_content": "以日、月、年計算全屋用電量和用水量。您也可以查看單一裝置的能耗統計、所選時間內各裝置的能耗佔比、整體能耗和單一裝置的能耗。",
     "smart_support_helps_3": "3. 疑难解答",
     "CL_SL_CM_about_usage_month_desc": "顯示的數據是估計值，而不是精確測量值。\n我們的估計是基於受控測試，因此您的實際結果可能會有所不同。\n現實世界的能源使用取決於您的特定環境和習慣。",
-    "CL_CF_HP_no_card_key": "無卡"
+    "CL_CF_HP_no_card_key": "無卡",
+    "CL_CF_TV_new_to_connectlife": "連結生活新體驗",
+    "CL_CF_TV_scan_with_cl": "使用 ConnectLife 行動應用程式進行掃描",
+    "CL_CF_AS_or": "或者",
+    "CL_CF_AS_report_an_issue": "報告問題。"
 }
